--- a/style.css
+++ b/style.css
@@ -1,69 +1,111 @@
-  body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f7f7f7;
-    }
+html, body {
+	padding: 0;
+	margin: 0;
+	overflow: hidden;
+	height: 100%;
+}
 
-    header {
-      background-color: #333333;
-      color: rgb(255, 94, 0);
-      padding: 20px 0;
-      text-align: center;
-    }
+body {
+	background: #000000;
+	color: white;
+}
 
-    nav {
-      background-color: #252525;
-      display: flex;
-      justify-content: right;
-      
-    }
+html, body, canvas {
+	touch-action-delay: none;
+	touch-action: none;
+}
 
-    nav a {
-      color: rgb(255, 252, 252);
-      padding: 15px 20px;
-      text-decoration: none;
-      float: right;
-    }
+canvas, .c3htmlwrap {
+	position: absolute;
+}
 
-    nav a:hover {
-      background-color: #fa0606;
-    }
+.c3htmlwrap {
+	contain: strict;
+}
 
-    main {
-      padding: 20px;
-    }
+.c3overlay {
+	pointer-events: none;
+}
 
-    section {
-      margin-bottom: 30px;
-      background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-    }
+.c3htmlwrap[interactive] > * {
+	pointer-events: auto;
+}
 
-    h2 {
-      color: #333;
-    }
+/* HACK - work around elements being selectable only in iOS WKWebView for some reason */
+html[ioswebview] .c3htmlwrap,
+html[ioswebview] canvas {
+	-webkit-user-select: none;
+	user-select: none;
+}
 
-    footer {
-      background-color: #222;
-      color: rgb(255, 255, 255);
-      text-align: center;
-      padding: 15px 0;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-       text-align: center;
-    }
+html[ioswebview] .c3htmlwrap > * {
+	-webkit-user-select: auto;
+	user-select: auto;
+}
 
-    img {
-      max-width: 100%;
-      border-radius: 8px;
-    }
-    .menu {
-      display: none;
-    }
-  .esconder {
-    display: none;
-  }
+#notSupportedWrap {
+	margin: 2em auto 1em auto;
+	width: 75%;
+	max-width: 45em;
+	border: 2px solid #aaa;
+	border-radius: 1em;
+	padding: 2em;
+	background-color: #f0f0f0;
+	font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+	color: black;
+}
 
+#notSupportedTitle {
+	font-size: 1.8em;
+}
+
+.notSupportedMessage {
+	font-size: 1.2em;
+}
+
+.notSupportedMessage em {
+	color: #888;
+}
+
+/* bbcode styles */
+.bbCodeH1 {
+	font-size: 2em;
+	font-weight: bold;
+}
+
+.bbCodeH2 {
+	font-size: 1.5em;
+	font-weight: bold;
+}
+
+.bbCodeH3 {
+	font-size: 1.25em;
+	font-weight: bold;
+}
+
+.bbCodeH4 {
+	font-size: 1.1em;
+	font-weight: bold;
+}
+
+.bbCodeItem::before {
+	content: " • ";
+}
+
+/* For text icons converted to HTML: size the height to the line height
+   preserving the aspect ratio. Also add position: relative as that allows
+   just adding a 'top' style for the iconoffsety style. */
+.c3-text-icon {
+	height: 1em;
+	width: auto;
+	position: relative;
+}
+
+/* screen reader text */
+.c3-screen-reader-text {
+	position: absolute;
+	width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
+}
